<?xml version="1.0" encoding="utf-8"?>

<skins xmlns:android="http://schemas.android.com/apk/res/android">
	<!--
	Each <skin> entry defines one available skin
	
	name - required - localized skin name
	author - optional - localized skin author
	description - optional - localized skin description, possible, multiline
	style - required - theme @style
	-->
	<skin
		name="@string/skin1_name"
		author="@string/author"
		description="@string/skin1_description"
		style="@style/Skin1"
	/>
	
	<skin
		name="@string/skin2_name"
		author="@string/author"
		description="@string/skin2_description"
		style="@style/Skin2"
	>
		<!-- 
		    Optional per-skin settings. These are just switches, which can be checked or not. Default state is defined by checkedByDefault.
		    If option is checked, Poweramp applies overlapStyle style over base <skin> style, resulting in modified theme.
		    If multiple options are checked, they are overlapped in the same order options are defined in this xml.
		    
			key - required - simple unique per this APK preference key
			name - required - localized name string visible to user in settings
			overlapStyle - requires - @style of the option <style> which will overlap and override base skin style
			checkedByDefault - optional - true or false. If true, this options is checked by default
		-->
		 
		<option key="option1" name="@string/skin2_option1" overlapStyle="@style/Skin2_option1" checkedByDefault="true"/>
		<option key="option2" name="@string/skin2_option2" overlapStyle="@style/Skin2_option2"/>
	</skin>
		
</skins>