<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="320dp" 
	android:layout_height="wrap_content"
	android:id="@android:id/custom"
	android:padding="16dp"
>
	<ImageView
		android:id="@+id/icon"
		android:src="@drawable/skin_app_icon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="2dip"
	/>
	<TextView
		android:id="@+id/title"
		android:layout_marginLeft="10dip"
		android:layout_toRightOf="@+id/icon"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/app_name"
		android:textSize="18sp"
		android:textStyle="bold"
		android:layout_alignTop="@+id/icon"
		android:layout_alignBottom="@+id/icon"
		android:gravity="center_vertical"
	/>

	<TextView
		android:id="@+id/msg1"
		android:layout_below="@+id/icon"		
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/installation_ok"
		android:textSize="16sp"
		android:layout_marginTop="22dip"
		android:layout_marginBottom="16dip"
	/>
	
	<Button android:id="@+id/button1"
		android:layout_below="@id/msg1"
		android:onClick="onButton1Click"
		android:layout_centerHorizontal="true"
		android:layout_width="fill_parent"
		android:layout_height="100dip"
		android:text="@string/start_poweramp"
		android:textSize="18sp"
		android:layout_margin="10dip"
	/>
</RelativeLayout>
